# dimicheck4

./: .class_config_cache.json  .gitignore  404.html  app.py  arcade_routes.py  auth.py  censor-test.html  chat-privacy.html  chat-terms.html  chat.html  chat_routes.py  class_routes.py  config.py  config_loader.py  console.html  content_filter.py  developer_routes.py  down.html  enter_pin.html  event_routes.py  events.html  gunicorn.conf.py  index.html  launcher.html  login.html  main.css  main.py  manifest.webmanifest  mcp_auth.py  mcp_routes.py  mcp_server.py  migrate_chat.py  migrate_db.py  migrate_schoollife.py  models.py  my.html  notice.html  package-lock.json  privacy.html  progress.md  (+23 more)
.codex/: auth.json  config.toml  history.jsonl  models_cache.json  state_5.sqlite-shm  state_5.sqlite-wal  version.json
account/: __init__.py  routes.py
auth/: google.py  routes.py  sessions.py
bsod/: bsod.html
instance/: app.db
js/: arcade-host.js  arcade-join.js  arcade-party-host.js  arcade-party-join.js  arcade-turtle-host.js  arcade-turtle-join.js  auth-guard.js  board-cosmetics.js  chat-features.js  chat-page.js  chat.js  etc.js  events.js  gif-picker.js  info.js  magnet.js  media-manager.js  my-page.js  notifications.js  preferences.js  pwa.js  reactions.js  reset.js  shop.js  storage.js  teacher-events.js  time.js  voting.js  wallpaper.js
migrations/: add_api_tiers.py  add_chat_features.py  add_dimicheck_oauth.py  add_public_api.py
oauth/: __init__.py  authorize.py  token.py  userinfo.py  utils.py
templates/: arcade_home.html  arcade_host.html  arcade_join.html  (+14 more)
(+35 files in other folders)
