[project]
name = "dimicheck4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask==2.3.2",
    "flask-cors==3.0.10",
    "flask-smorest==0.42.0",
    "flask-socketio==5.3.4",
    "flask-sqlalchemy==3.0.5",
    "google-auth==2.33.0",
    "gspread>=6.2.1",
    "modelcontextprotocol==1.0.1",
    "openpyxl==3.1.2",
    "prometheus-client==0.16.0",
    "python-jose[cryptography]==3.3.0",
    "requests==2.31.0",
    "simple-websocket>=1.0.0",
]
